public class NotificationSettings extends Settings{
}
